dataset1235/2025-2/805158916/users/2584427029/executions/1584167357_1559799913.log
== SUBMISSION (2025-08-27 15:18:56)
-- CODE: 
numero = int(input("Digite um numero")
quadrado = numero **2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero")
                ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:19:14)
-- CODE: 
numero = int(input("Digite um numero: ")
quadrado = numero **2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero: ")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero: ")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero: ")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero: ")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero: ")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero: ")
                ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:19:28)
-- CODE: 
numero = int(input("Digite um numero: ")
quadrado = numero **2
print(quadrado))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero: ")
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero: ")
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero: ")
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero: ")
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero: ")
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero: ")
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:18:17)
-- CODE: 
numero = int(input("Digite um numero")
quadrado = numero (**2)
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero")
                ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:18:26)
-- CODE: 
numero = int(input("Digite um numero")
quadrado = numero **2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero")
                ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:47:49)
-- CODE: 
numero = input("Digite um numero")
quadrado = numero (10-2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
File "XXXX", line 2
    quadrado = numero (10-2
                      ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
File "XXXX", line 2
    quadrado = numero (10-2
                      ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
File "XXXX", line 2
    quadrado = numero (10-2
                      ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
File "XXXX", line 2
    quadrado = numero (10-2
                      ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
File "XXXX", line 2
    quadrado = numero (10-2
                      ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
File "XXXX", line 2
    quadrado = numero (10-2
                      ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
